--- a/css/style.css
+++ b/css/style.css
@@ -133,25 +133,29 @@ img{
 
 .menu{
   background-color: darkgray;
-  height: 8rem;
-  display: flex;
- /*justify-content: space-evenly;*/
-  align-items: center;
-  gap: 2rem;
-  margin-bottom: 5rem;
+  
 }
 
-.menu img{
+.sub-menu{
+  height: 9rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.sub-menu img{
   width: 6rem;
 }
 
-.menu a{
+.sub-menu a{
+  width: 9rem;
   text-decoration: none;
-  width: 10rem;
   font-size: 1rem;
-  border-right: solid 0.2rem #000;
   padding: 1rem;
+  color: #fff;
+  border-right: solid 0.1rem #fff;
 }
+
 
 .sub-hero{
   background-image: url(../assets/images/parejaEstudia.JPG);
@@ -250,6 +254,7 @@ img{
   background-position: center center;
   width: 40rem;
   height: 20rem;
+  padding: 2rem;
 }
 .horario{
   background-image: url(../assets/images/fondoBotonAzul.png);
@@ -258,4 +263,31 @@ img{
   background-position: center center;
   width: 40rem;
   height: 20rem;
+  padding: 2rem;
 }
+
+.acceso p{
+  color: #040d8b;
+  line-height: 2rem;
+}
+.horario p{
+  color: #fff;
+  line-height: 2rem;
+}
+.mencion p{
+  color: #040d8b;
+  line-height: 2rem;
+} 
+.acceso img{
+  width: 15rem;
+  margin-bottom: 2rem;
+}
+.horario img{
+  width: 9.6rem;
+  margin-bottom: 3rem;
+}
+.mencion img{
+  width: 9rem;
+  margin-bottom: 2rem;
+}
+
