--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,14 @@ img{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 15rem;
-  margin-bottom: 4.8rem;
+  height: 12rem;
+  /*margin-bottom: 4.8rem;*/
 }
 @media (min-width: 768px){
     
  .hero{
     height: 15rem;
+    margin-bottom: 4.8rem;
   }
 }
 
@@ -125,12 +126,18 @@ img{
   justify-content: space-around;
   align-items: center;
   padding: 2rem 0 2rem 0;
-
 }
 
 .logo-hero img{
-  width: 30rem;
+  width: 15rem;
 }
+
+@media (min-width: 768px){
+    
+  .logo-hero img{
+     width: 30rem;
+   }
+ }
 
 .menu{
   background-color: #69797D;
@@ -171,25 +178,134 @@ button{
   cursor: pointer;
 }
 
+.menu-icon{
+  font-size: 3rem;
+  cursor: pointer;
+  margin-left: 2rem;
+  color: #69797D;
+}
+.menu-icon:hover{
+  color: #fff;
+}
+
+.menu_checkbox{
+  display: none;
+}
+.menu-mobile-items{
+  position: fixed;
+  top: 12rem;
+  right: 0;
+  height: 40rem;
+  width: 100%;
+  background: #69797D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  z-index: 1;
+  transform: translate(100%);
+  transition: .4s transform;
+}
+.menu-mobile-items li{
+  list-style: none;
+}
+.menu-mobile-items a{
+  text-decoration: none;
+  font-size: 1.8rem;
+  color: #1D327B;
+  font-weight: 600;
+}
+:checked + *{
+  transform: translate(0);
+}
+@media (max-width: 760px ) {
+
+  .menu{
+      display: none;
+  }
+}
+@media (min-width: 768px ) {
+
+  .menu-mobile{
+      display: none;
+  }
+}
+@media (min-width: 1024px){
+  .menu-mobile{
+      display: none;
+  }
+}
 
 .sub-hero{
-  background-image: url(../assets/images/parejaEstudia.JPG);
+  background: #69797D;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 60rem;
+  height: 65rem;
 }
+@media (min-width: 768px ) {
+
+  .sub-hero{
+    height: 40rem;
+    
+  }
+}
+@media (min-width: 1024px ) {
+
+  .sub-hero{
+    background-image: url(../assets/images/parejaEstudia.JPG);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 60rem;
+  }
+}
+
 .card-hero{
-  width: 60rem;
-  margin-left: 20rem;
-  padding-top: 10rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
+
+}
+@media (min-width: 1024px ) {
+
+  .card-hero{
+    width: 60rem;
+    margin-left: 20rem;
+    padding-top: 10rem;
+    
+  }
 }
 
 .card-hero img{
-  width: 40rem;
+  width: 20rem;
   display: block;
   margin: 0 auto;
-  margin-bottom: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 768px ) {
+
+  .card-hero img{
+    width: 40rem;
+    
+  }
+}
+
+@media (min-width: 1024px ) {
+
+  .card-hero img{
+    width: 40rem;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    
+  }
 }
 
 .card-hero span{
@@ -210,35 +326,71 @@ button{
   background-size: cover;
   background-position: center center;
   height: 60rem;
-  /**/
 }
 
 .contenido-metodo{
   display: flex;
-  justify-content: space-around;
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
   align-items: center;
 }
-
 .metodologia{
-  margin-top: 15rem;
-  font-size: 5rem;
+  margin-top: 8rem;
+  font-size: 4rem;
   line-height: 7rem;
   color: #fff;
 }
 .metodologia h3{
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 12rem;
+  font-size: 8rem;
   color: #FFE900;
+  padding: 1rem;
 }
 .metodologia p{
-  font-size: 7rem;
+  font-size: 5rem;
   color: #FFE900;
 }
 
 .carrusel img{
-  margin-top: 20rem;
+  margin-top: 5rem;
 }
+
+@media (min-width: 1024px ) {
+
+  .contenido-metodo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .metodologia{
+    margin-top: 15rem;
+    font-size: 5rem;
+    line-height: 7rem;
+    color: #fff;
+  }
+  .metodologia h3{
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 12rem;
+    color: #FFE900;
+  }
+  .metodologia p{
+    font-size: 7rem;
+    color: #FFE900;
+  }
+  .carrusel img{
+    margin-top: 20rem;
+  }
+}
+
+
+
+
 
 /*SECCION BOTONES*/
 
