Se coloca el header en position fixed

--- a/css/style.css
+++ b/css/style.css
@@ -245,11 +245,13 @@ button{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  margin-top: 10rem;
   height: 65rem;
 }
 @media (min-width: 768px ) {
 
   .sub-hero{
+    margin-top: 20rem;
     height: 40rem;
     
   }
