--- a/css/style.css
+++ b/css/style.css
@@ -336,17 +336,16 @@ button{
 }
 
 .contenido-metodo{
+  width: 410px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;
   padding-right: 2rem;
-  /*flex-direction: column-reverse;
-  justify-content: space-evenly;
-  align-items: center;*/
 }
 .metodologia{
   width: 100%;
-  font-size: 4rem;
+  font-size: 5rem;
   line-height: 7rem;
+  padding: 2rem;
   color: #fff;
 }
 .metodologia h3{
@@ -367,20 +366,18 @@ button{
   opacity: 0.8;
 }
 .carrusel h3{
+  background-color: #004f9e;
   color: #ffe800;
-}
-.carrusel.titulo-carrusel h3{
-  color: #1D327B;
+  font-weight: 900;
+  opacity: 0.7;
 }
 
-
-@media (max-width: 768px){
+@media (min-width: 768px){
   .contenido-metodo{
     width: 760px;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-evenly;
-    align-items: center;
+    padding: 3rem;
+    /*display: grid;
+    grid-template-columns: 1fr 1fr;*/
   }
   .metodologia{
     display: none;
@@ -400,7 +397,7 @@ button{
     color: #FFE900;
   }
   .carrusel img{
-    width: 50%;
+    width: 30%;
     display: block;
     margin: 0 auto;
   }
@@ -413,11 +410,12 @@ button{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-right: 2rem;
+    padding: 2rem;
   }
 
   .metodologia{
-    margin-top: 15rem;
+    display: grid;
+    /*margin-top: 3rem;*/
     font-size: 5rem;
     line-height: 7rem;
     color: #fff;
@@ -642,7 +640,7 @@ button{
 }
 .imagen-superpuesta h4{
   position: absolute;
-  top: 10%;
+  top: 15%;
   left: 20%;
   font-size: 3.5rem;
   letter-spacing: 1rem;
@@ -668,7 +666,7 @@ button{
 
   .imagen-superpuesta p{
     position: absolute;
-    top: 10%;
+    top: 3%;
     left: 22%;
     font-size: 3rem;
   }
@@ -692,13 +690,13 @@ button{
   }
   .imagen-superpuesta p{
     position: absolute;
-    top: 7%;
+    top: 5%;
     left: 20%;
     font-size: 5rem;
   }
   .imagen-superpuesta h4{
     position: absolute;
-    top: 5%;
+    top: 12%;
     left: 17%;
     font-size: 15rem;
     letter-spacing: 1rem;
@@ -709,17 +707,68 @@ footer{
   margin-top: 25rem;
   background-color: #004f9e;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   padding: 2rem;
 }
-footer img{
-  width: 20rem;
+
+.direccion{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.direccion h6{
+  font-size: 2rem;
+  color: #fff;
+}
+.direccion p{
+  font-size: 1.5rem;
+  color: #fff;
+  text-align: justify;
+}
+
+.fa-location-dot, .fa-phone-volume, .fa-mobile, .fa-envelope{
+  margin-right: 1.5rem;
+}
+
+.mapa{
+  border-radius: 20px;
+}
+
+.footer-fin{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-top: #69797D solid 1px;
+  margin-top: 2rem;
 }
 
 .texto-footer{
   color: #ffe800;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  margin-top: 2rem;
+}
+
+.iconos{
+  display: flex;
+  font-size: 4rem;
+  gap: 3rem;
+  margin-top: 2rem;
+  cursor: pointer;
+}
+.iconos a:hover{
+  color: #ffe800;
+  font-size: 3rem;
+  padding: 0.5rem;
+  
+}
+
+iframe{
+  border-radius: 5px;
 }
 
 @media (min-width: 768px){
@@ -732,3 +781,79 @@ footer img{
     margin-top: 40rem;
   }
 } 
+
+.oferta{
+  background-color: #1D327B;
+  margin-top: 3rem;
+  position: relative;
+}
+
+.oferta-titulo{
+  width: 50%;
+  position: absolute;
+  top: 40%;
+  left: 20%;
+  z-index: 1;
+}
+
+.oferta-titulo h4{
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  font-size: 3.5rem;
+  line-height: 5rem;
+  -webkit-text-stroke-width: 1.6px;
+  -webkit-text-stroke-color: #69797D;
+}
+
+.oferta-titulo span{
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  font-size: 3.5rem;
+  line-height: 5rem;
+  -webkit-text-stroke-width: 1.6px;
+  -webkit-text-stroke-color: #69797D;
+}
+
+.carrusel-oferta{
+  width: 100%;
+  height: 70rem;
+  opacity: 0.5;
+}
+
+.carrusel-oferta img{
+  width: 50%;
+  height: 600px;
+  margin-top: 10rem;
+  object-fit: cover;
+  opacity: 0.7;
+}
+
+.carrusel-oferta h3{
+  background-color: #69797D;
+  opacity: 0.7;
+}
+
+.contenido{
+  width: 100%;
+  height: 60rem;
+}
+
+.tarjetas{
+  display: flex;
+  gap: 2rem;
+}
+
+.tarjeta-contenido{
+  width: 300px;
+
+
+}
+
+.tarjeta-titulo{
+  background-color: #69797D;
+}
+.tarjeta-titulo h2{
+  color: #fff;
+  font-size: 2rem;
+  padding: 2rem;
+}
