--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@ html{
 }
 
 body{
-  font-family: "Poppins", sans-serif;
-  /*background: #e6f2f862;*/
+  font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
   line-height: 2; 
 }
@@ -115,7 +114,6 @@ img{
   width: 100%;
   height: 12rem;
   z-index: 1000;
-  /*margin-bottom: 4.8rem;*/
 }
 @media (min-width: 768px){
     
@@ -144,8 +142,8 @@ img{
  }
 
 .menu{
-  background-color: #69797D;
-  
+  background-color: #69797d9a;
+  margin-top: 3rem;
 }
 
 .sub-menu{
@@ -161,19 +159,18 @@ img{
 }
 
 .sub-menu a{
-  width: 12rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
   text-decoration: none;
   font-size: 1.2rem;
-  border-right: solid 0.1rem #fff;
   cursor: pointer;
 }
 
 .sub-menu a:hover{
-  background-color: #ffe800;
+  border-bottom: #ffe800 solid 1px;
   color: #1D327B;
+  font-size: 1.5rem;
+  font-weight: 800;
 }
 
 button{
@@ -241,17 +238,13 @@ button{
 }
 
 .sub-hero{
-  background: #69797D;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
   margin-top: 10rem;
   height: 65rem;
 }
 @media (min-width: 768px ) {
 
   .sub-hero{
-    margin-top: 20rem;
+    /*margin-top: 20rem;*/
     height: 40rem;
     
   }
@@ -259,10 +252,10 @@ button{
 @media (min-width: 1024px ) {
 
   .sub-hero{
-    background-image: url(../assets/images/parejaEstudia.JPG);
+    /*background-image: url(../assets/images/parejaEstudia.JPG);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center center;*/
     height: 60rem;
   }
 }
@@ -333,6 +326,7 @@ button{
   min-width: 120rem;
   width: 100%;
   height: 60rem;
+  margin-top: 60rem;
 }
 
 .contenido-metodo{
@@ -349,7 +343,7 @@ button{
   color: #fff;
 }
 .metodologia h3{
-  font-family: "Roboto", sans-serif;
+  /*font-family: "Roboto", sans-serif;*/
   font-weight: 700;
   font-size: 8rem;
   color: #FFE900;
@@ -362,8 +356,9 @@ button{
 
 .carrusel{
   width: 100%;
-  padding: 2rem;
-  opacity: 0.8;
+  height: 60rem;
+  /*padding: 2rem;*/
+  /*opacity: 0.8;*/
 }
 .carrusel h3{
   background-color: #004f9e;
@@ -387,7 +382,7 @@ button{
     color: #fff;
   }
   .metodologia h3{
-    font-family: "Roboto", sans-serif;
+    /*font-family: "Roboto", sans-serif;*/
     font-weight: 700;
     font-size: 12rem;
     color: #FFE900;
