Se adiciono el envio de los formularios a whatsapp y se realizo cambios en unas páginas

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,12 @@ img{
   }
 }
 
+.bi-house-door-fill{
+  background-color: #69797dc4;
+  color: #fff;
+  font-size: 6rem;
+}
+
 /*UTILIDADES*/
 
 .text-center{
