--- a/css/style.css
+++ b/css/style.css
@@ -1113,7 +1113,7 @@ iframe{
 
 /*PAGINA OFERTA ACADEMICA*/
 .oferta{
-  background-image: url(/assets/images/posgrado.png);
+  background-image: url(/assets/images/pregrado.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1136,7 +1136,7 @@ iframe{
 @media(min-width: 768px){
   .oferta{
     margin-top: 23.5rem;
-    height: 125rem;
+    height: 100rem;
   }
 }
 
@@ -1224,7 +1224,8 @@ iframe{
 }
 @media(min-width: 1024px){
   .banner-carrera img{
-    margin-top: 43rem;
+    margin-top: 25rem;
+    margin-bottom: 10rem;
   }
 }
 
@@ -1327,6 +1328,9 @@ iframe{
 
 @media(min-width: 1024px){
   
+  .tarjetas{
+    margin-top: 20rem;
+  }
   .tarjeta-contenido{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -1374,6 +1378,11 @@ iframe{
     height: 125rem;
   }
 }
+@media(min-width: 1024px){
+  .formacion{
+    height: 100rem;
+  }
+}
 
 .texto-formcontinua{
   display: block;
@@ -1413,7 +1422,7 @@ iframe{
     font-size: 2rem;
     line-height: 3rem;
     margin-left: 15rem;
-    margin-bottom: -10rem;
+    margin-bottom: -20rem;
   }
 }
 
@@ -1464,6 +1473,74 @@ iframe{
   }
 }
 
+/*PAGINA MATRICULATE ONLINE*/
+
+/*Formulario ingreso*/
+
+.ingreso{
+  width: 500px;
+  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /*align-items: center;*/
+  text-align: center;
+  margin-top: 30rem;
+  margin-left: 70rem;
+}
+
+.ingreso a{
+  text-decoration: none;
+  color: #00329b;
+}
+.form-ingreso{
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  background-color: #69797D;
+  border: 0.5px #004f9e solid;
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 3rem;
+}
+
+#nombre_usuario,
+#contrasena{
+  padding: 0.8rem;
+  border: none;
+  border-radius: 10px;
+}
+
+button{
+  width: 20rem;
+  font-size: 2rem;
+  background-color: #1D327B;
+  padding: 0.8rem;
+  border: none;
+  border-radius: 8px;
+  color: #FFF;
+  margin: 0 auto;
+  margin-top: 2rem;
+
+}
+button:hover{
+  background-color: #ffe800;
+  color: #004f9e;
+}
+
+input{
+  font-family: var(--fuenteSegundaria);
+}
+
+/*PAGINA TECNOLOGIA SALUD*/
+
+.texto-intro{
+ /* display: block;
+  margin: 0 auto;*/
+  width: 900px;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+}
 
 /*PAGINA DIPLOMADO ADULTO MAYOR*/
 .formacion-adulto{
