--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ img{
    }
  }
 
+ /*SECCION MENU Y SUBMENU*/
 .menu{
   background-color: #69797d9a;
   margin-top: 3rem;
@@ -192,14 +193,14 @@ img{
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  background: #69797d49;
+  background: #69797dd7;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
   border-radius: 0 2rem;
 }
 
 .navbar .dropdown ul li {
-  min-width: 200px;
+  min-width: 400px;
 }
 
 .navbar .dropdown ul a {
