--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,10 @@ img{
   top: calc(100% + 3rem);
   margin: 0;
   padding: 1rem 0;
-  z-index: 99;
+  z-index: 1000;
   opacity: 0;
   visibility: hidden;
-  background: #69797dd7;
+  background: #f5f9fa;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
   border-radius: 0 2rem;
@@ -1168,7 +1168,7 @@ iframe{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 3rem;
-    z-index: 1000;
+    z-index: 99;
   }
 }
 .form-oferta{
