--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,9 @@ button{
   font-weight: 900;
   opacity: 0.7;
 }
+
+/*SECCION IMAGENES*/
+
 .img-admindex{
   background-color: #1d327b;
   margin-top: 80rem;
@@ -472,7 +475,7 @@ button{
 
 @media (min-width: 1024px ) {
   .metodo{
-    margin-top: 53rem;
+    margin-top: 50rem;
     height: 70rem;
   }
   .contenido-metodo{
@@ -501,7 +504,7 @@ button{
 
 @media (min-width: 1500px ) {
   .metodo{
-    margin-top: 85rem;
+    margin-top: 62rem;
     height: 90rem;
   }
 }
@@ -760,9 +763,10 @@ button{
 .eventos{
   padding: 1rem;
 }
-.tarjeta h3{
-  text-align: justify;
-  padding: 2rem;
+.tarjeta h4{
+  text-align: center;
+  padding: 1.5rem;
+  font-size: 1.8rem;
 }
 .tarjeta-evento p{
   margin-top: -4rem;
@@ -773,9 +777,24 @@ button{
   font-size: 2rem;
   color: #1D327B;
 }
+.tarjeta-evento img{
+  width: 100%;
+  transition: all 600ms;
+  position: relative;
+}
+
+.tarjeta-evento img:hover{
+  transform: scale(1.08);
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.tarjeta-evento a:hover{
+  color: #333;
+}
 
 @media (min-width: 768px){
-  .eventos h2{
+  .eventos h4{
     margin-bottom: 3rem;
   }
   .tarjeta{
@@ -788,11 +807,11 @@ button{
 
 @media (min-width: 1024px){
   .tarjeta{
-    width: 50%;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: unset;
-    column-gap: 1rem;
+    column-gap: 3rem;
   }
 }
 
@@ -1479,15 +1498,16 @@ iframe{
 /*Formulario ingreso*/
 
 .ingreso{
-  width: 500px;
-  height: 50rem;
+  background-image: url('../assets/images/matriculaOnline/vision.jpg');
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   /*align-items: center;*/
   text-align: center;
   margin-top: 30rem;
-  margin-left: 70rem;
+  /*margin-left: 70rem;*/
 }
 
 .ingreso a{
@@ -1509,7 +1529,7 @@ iframe{
 }
 
 .card {
-  background-image: url('../assets/images/matriculaOnline/vision.jpg');
+  
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 1rem;
@@ -1600,7 +1620,7 @@ button:hover{
 }
 
 input{
-  font-family: var(--fuenteSegundaria);
+  font-family: "Roboto", sans-serif;
 }
 
 /*PAGINA METODOLOGIA DE ESTUDIO*/
