--- a/css/style.css
+++ b/css/style.css
@@ -1498,9 +1498,8 @@ iframe{
 /*Formulario ingreso*/
 
 .ingreso{
-  background-image: url('../assets/images/matriculaOnline/vision.jpg');
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1529,7 +1528,7 @@ iframe{
 }
 
 .card {
-  
+  background-image: url('../assets/images/matriculaOnline/vision.jpg');
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 1rem;
