--- a/css/style.css
+++ b/css/style.css
@@ -1498,15 +1498,12 @@ iframe{
 /*Formulario ingreso*/
 
 .ingreso{
-  /*width: 100%;
-  height: 100%;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
   /*align-items: center;*/
   text-align: center;
   margin-top: 30rem;
-  /*margin-left: 70rem;*/
 }
 
 .ingreso a{
@@ -1528,7 +1525,7 @@ iframe{
 }
 
 .card {
-  background-image: url('../assets/images/matriculaOnline/vision.jpg');
+  background-image: url('../assets/images/imgLogin.png');
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 1rem;
@@ -2082,6 +2079,13 @@ input{
   }
 }
 
+.btn-malla_fin{
+  width: 50rem;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 50rem;
+}
+
 .boton-informacion{
   width: 15rem;
   background-color: #1d327b;
@@ -2098,6 +2102,32 @@ input{
   text-align: center;
   padding: 2rem;
 }
+
+.boton-informacion a:hover{
+  color: #ffe800;
+}
+
+.boton-fin{
+  width: 20rem;
+  background-color: #1d327b;
+  border-radius: 8px;
+  margin-bottom: 3rem;
+  text-align: center;
+  font-weight: 600;
+  padding: 2rem;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.boton-fin a{
+  text-align: center;
+  padding: 2rem;
+}
+
+.boton-fin a:hover{
+  color: #ffe800;
+}
+
 
 .banner-adm{
   height: 35rem;
