--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,9 @@ img{
  }
 
  /*SECCION MENU Y SUBMENU*/
-.menu{
-  background-color: #69797d9a;
+/*.menu{
+  /*background-color: #69797d9a;
+  background-color: #fff;
   margin-top: 3rem;
 }
 
@@ -170,14 +171,15 @@ img{
   align-items: center;
   text-decoration: none;
   font-size: 1.2rem;
+  color: #1D327B;
+  font-weight: 800;
   cursor: pointer;
 }
 
 .sub-menu a:hover{
   border-bottom: #ffe800 solid 1px;
-  color: #1D327B;
   font-size: 1.5rem;
-  font-weight: 800;
+  /*font-weight: 800;
 }
 .navbar li{
   list-style: none;
@@ -200,7 +202,11 @@ img{
 }
 
 .navbar .dropdown ul li {
-  min-width: 400px;
+  min-width: 1000px;
+}
+.dropdown-area{
+  width: 1200px;
+  left: 0;
 }
 
 .navbar .dropdown ul a {
@@ -234,7 +240,236 @@ img{
   top: 0;
   left: 100%;
   visibility: visible;
+}*/
+
+/* SECCION MENU Y SUBMENU */
+/*.menu {
+  background-color: #fff;
+  margin-top: 3rem;
 }
+
+.sub-menu {
+  height: 9rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sub-menu img {
+  width: 6rem;
+}
+
+.sub-menu a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #1D327B;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.sub-menu a:hover {
+  border-bottom: #ffe800 solid 1px;
+  font-size: 1.5rem;
+}
+
+.navbar li {
+  list-style: none;
+}
+
+.navbar .dropdown ul {
+  display: none;
+  position: absolute;
+  left: 1.5rem;
+  top: calc(100% + 3rem);
+  margin: 0;
+  padding: 1rem 0;
+  z-index: 1000;
+  background: #f5f9fa;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  transition: 0.3s;
+  border-radius: 0 2rem;
+}
+
+.navbar .dropdown ul li {
+  min-width: 200px;
+}
+
+/*.dropdown-area {
+  width: 600px;
+  left: 0;
+}
+
+.navbar .dropdown ul a {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: none;
+  text-decoration: none;
+  border: none;
+  color: #00329b;
+}
+
+.navbar .dropdown ul a i {
+  font-size: 1.2rem;
+}
+
+.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
+  color: #00329b;
+  font-weight: 800;
+}
+
+.navbar .dropdown:hover > ul {
+  display: flex;
+}*/
+
+/* SECCION MENU Y SUBMENU */
+.menu {
+  background-color: #fff;
+  margin-top: 3rem;
+}
+
+.sub-menu {
+  height: 9rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sub-menu img {
+  width: 6rem;
+}
+
+.sub-menu a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #1D327B;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.sub-menu a:hover {
+  border-bottom: #ffe800 solid 1px;
+  font-size: 1.5rem;
+}
+
+.navbar li {
+  list-style: none;
+  position: relative; /* Ensures submenu positioning is relative to parent */
+}
+
+/* General styling for dropdowns */
+.navbar .dropdown > ul {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 3rem);
+  margin: 0;
+  padding: 1rem 0;
+  z-index: 1000;
+  background: #f5f9fa;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  transition: 0.3s;
+  border-radius: 0 2rem;
+  min-width: 1000px;
+}
+
+/* Dropdown links styling */
+.navbar .dropdown ul a {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: none;
+  text-decoration: none;
+  border: none;
+  color: #00329b;
+}
+
+.navbar .dropdown ul a:hover {
+  color: #00329b;
+  font-weight: 800;
+}
+
+/* Dropdown visibility */
+.navbar .dropdown:hover > ul,
+.navbar .dropdown:focus-within > ul {
+  display: block;
+}
+
+/* Specific styles for submenu under CARRERAS TÉCNICAS */
+.submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #333;
+  padding: 10px;
+  z-index: 1000;
+  width: 100%; /* Adjust width as needed */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.submenu-secciones {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.submenu-secciones h4 {
+  margin: 0;
+  padding: 10px;
+  color: #fff;
+  background-color: #444;
+}
+
+.submenu-secciones ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.submenu-secciones ul li {
+  border-bottom: 1px solid #444;
+}
+
+.submenu-secciones ul li a {
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.submenu-secciones ul li a:hover {
+  background-color: #555;
+}
+
+/* Ensure submenu remains visible while hovering */
+.menu-item:hover .submenu,
+.menu-item:focus-within .submenu {
+  display: grid;
+}
+
+/* Ensure submenu for FORMACION CONTINUA stays as it was */
+.submenu-continuous {
+  display: none;
+}
+
+.navbar .dropdown:hover .submenu-continuous,
+.navbar .dropdown:focus-within .submenu-continuous {
+  display: block;
+}
+
+
+
+
+
+
+
+
 
 button{
   background-color: #69797D;
@@ -319,7 +554,7 @@ button{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;*/
-    height: 40rem;
+    height: 15rem;
   }
 }
 
@@ -420,7 +655,7 @@ button{
 
 .carrusel{
   width: 100%;
-  height: 60rem;
+  height: 50rem;
   /*padding: 2rem;*/
   /*opacity: 0.8;*/
 }
@@ -450,7 +685,7 @@ button{
 @media (min-width: 768px){
   .metodo{
     margin-top: 19rem;
-    height: 50rem;
+    height: 30rem;
   }
   .contenido-metodo{
     width: 760px;
@@ -475,8 +710,8 @@ button{
 
 @media (min-width: 1024px ) {
   .metodo{
-    margin-top: 50rem;
-    height: 70rem;
+    margin-top: 10rem;
+    height: 30rem;
   }
   .contenido-metodo{
     width: 100%;
@@ -817,7 +1052,7 @@ button{
 
 /*ACCESOS DIRECTOS*/
 .accesodirecto{
-  background-color: #69797d44;
+  background-color: #69797db4;
   height: 68rem;
   text-align: center;
   padding-right: 2rem;
@@ -837,30 +1072,45 @@ button{
   justify-content: center;
   
 }
-.acceso1, .acceso2, .acceso3 a{
+.acceso1, .acceso2, .acceso3, .acceso4 a{
   width: 15rem;
 }
 
-.accesodirecto-menu ul li i{
+/*.accesodirecto-menu ul li i{
   background-color: #1D327B;
   border-radius: 50%;
-}
+}*/
 .accesodirecto-menu ul li i{
   font-size: 7rem;
-  color: #fff;
+  color: #1D327B;
+  transition: transform 0.3s;
 }
-.accesodirecto-menu i:hover{
-  color: #ffe800;
-}
+
 .accesodirecto-menu ul li a{
   font-size: 2rem;
   line-height: 2rem;
   color: #1D327B;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
 }
+
+.accesodirecto-menu ul li a:hover{
+  color: #ffe800;
+}
+
+/*.accesodirecto-menu ul li a:hover .icon, 
+.accesodirecto-menu ul li a:focus .icon {
+  transform: rotateY(180deg);
+}*/
 
 .accesodirecto-menu li:last-child {
   grid-column: span 2;
   justify-self: center;
+}
+
+.accesodirecto-menu i:hover{
+  color: #ffe800;
 }
 
 .icon{
@@ -868,7 +1118,7 @@ button{
   cursor: pointer;
 }
 
-.icon:hover{
+.icon:hover {
   transform: rotateY(180deg);
   
 }
@@ -969,7 +1219,7 @@ button{
 /*AREA FORMULARIO*/
 
 .registro-online{
-  width: 100%;
+  width: 400px;
   height: 42rem;
   display: flex;
   flex-direction: column;
@@ -1003,6 +1253,7 @@ form{
   color: #ffe800;
   padding: 1rem;
   border-radius: 10px;
+  margin-bottom: 3rem;
 }
 @media(min-width: 768px){
   .registro-online{
@@ -1011,7 +1262,8 @@ form{
 }
 @media(min-width: 1024px){
   .registro-online{
-    height: 28rem;
+    height: 31rem;
+
   }
 }
 
