--- a/css/style.css
+++ b/css/style.css
@@ -1408,7 +1408,7 @@ iframe{
 @media(min-width: 768px){
   .oferta{
     margin-top: 23.5rem;
-    height: 100rem;
+    height: 85rem;
   }
 }
 
@@ -1462,44 +1462,47 @@ iframe{
 }
 @media(min-width: 768px){
   .form-oferta{
-    width: 500px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #1d317b71;
   }
   .form-oferta input{
-    width: 450px;
+    width: 300px;
   }
 }
 @media(min-width: 1024px){
   .form-oferta{
-    width: 500px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #1d317b71;
   }
   .form-oferta input{
-    width: 450px;
+    width: 300px;
+  }
+  #tipoEstudio{
+    width: 300px;
   }
 }
-
 
 .banner-carrera img{
   margin-top: 5rem;
 }
-@media(min-width: 768px){
+
+/*@media(min-width: 768px){
   .banner-carrera img{
     margin-top: 2rem;
   }
 }
-@media(min-width: 1024px){
+/*@media(min-width: 1024px){
   .banner-carrera img{
     margin-top: 25rem;
     margin-bottom: 10rem;
   }
-}
+}*/
 
 .texto-esp{
   width: 100%;
@@ -1538,7 +1541,7 @@ iframe{
   gap: 20px;
   padding: 20px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  margin-top: 5rem;
+  /*margin-top: 5rem;*/
 }
 
 .tarjeta-contenido_central {
@@ -2483,6 +2486,7 @@ input{
 /*PAGINA EVENTOS*/
 
 .noticia{
+  width: 100rem;
   margin-top: 24rem;
   margin-bottom: -30rem;
   text-align: justify;
@@ -2493,13 +2497,40 @@ input{
   margin: 0 auto;
 }
 .titulo-imagen p{
-  font-size: 1rem;
+  font-size: 1.3rem;
+  font-style: italic;
+  font-weight: 700;
   margin-left: 15.8rem;
 }
 
+.resumen{
+  font-style: italic;
+  font-weight: 700;
+}
 /*.footer-evento{
   margin-bottom: -20rem;
 }*/
+.contenido-evento article{
+  font-style: italic;
+  font-weight: 700;
+}
+
+.notirecuadros{
+  width: 80rem;
+  margin-top: 3rem;
+  margin-left: 10rem;
+  padding: 1rem;
+  border-right: 2px #555;
+}
+.notirecuadros article{
+  font-size: 1.4rem;
+}
+.notirecuadros span{
+  font-weight: 700;
+}
+.notirecuadros p{
+  font-size: 1.3rem;
+}
 
 /*SECCION BOTONES*/
 
