--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ img{
 }
 
 .btn{
-  /*background-color: #1D327B;*/
+  /*background-color: #c5ceee;*/
   display: block;
   color: #fff;
   text-transform: uppercase;
@@ -1249,8 +1249,8 @@ form{
 
 .btnenviar{
   width: 100px;
-  background-color: #1D327B;
-  color: #ffe800;
+  background-color: #ffe800;
+  color: #1D327B;
   padding: 1rem;
   border-radius: 10px;
   margin-bottom: 3rem;
@@ -1474,17 +1474,17 @@ iframe{
 }
 @media(min-width: 1024px){
   .form-oferta{
-    width: 350px;
+    width: 380px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #1d317b71;
+    background-color: #1d317bfd;
   }
   .form-oferta input{
-    width: 300px;
+    width: 350px;
   }
   #tipoEstudio{
-    width: 300px;
+    width: 350px;
   }
 }
 
@@ -1614,19 +1614,19 @@ iframe{
 
   }
 
-  .tarjeta-contenido .tarjeta-contenido_central:nth-last-child(2) {
+  /*.tarjeta-contenido .tarjeta-contenido_central:nth-last-child(2) {
     grid-column: 1;
   }
 
   .tarjeta-contenido .tarjeta-contenido_central:nth-last-child(1) {
     grid-column: 3;
-  }
+  }*/
 }
 
 /*PAGINA FORMACION CONTINUA*/
 
 .formacion{
-  background-image: url(/assets/images/educacionContinua.jpg);
+  background-image: url(/assets/images/fondo/fondoFC.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2024,11 +2024,16 @@ input{
 }
 }
 
+/*UTILIDADES DE PAGINAS CARRERAS*/
+
+.contenido p{
+  text-align: justify;
+}
 
 /*PAGINA TECNOLOGIA SALUD*/
 
 .tecnologia-salud{
-  background-image: url(/assets/images/img-carreras/dos.png);
+  background-image: url(/assets/images/fondo/fondoAS.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2083,7 +2088,7 @@ input{
 /*PAGINA EMPRESAS*/
 
 .tecnologia-empresas{
-  background-image: url(/assets/images/img-carreras/uno.png);
+  background-image: url(/assets/images/fondo/fondoEMP.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2120,7 +2125,7 @@ input{
 /*PAGINA INNOVACION*/
 
 .tecnologia-innovacion{
-  background-image: url(/assets/images/img-carreras/tres.png);
+  background-image: url(/assets/images/fondo/fondoTEC.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2158,7 +2163,7 @@ input{
 /*PAGINA CALIDAD PRODUCTIVIDAD*/
 
 .tecnologia-calidad{
-  background-image: url(/assets/images/img-carreras/cuatro.png);
+  background-image: url(/assets/images/fondo/fondoCP.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2192,10 +2197,121 @@ input{
   }
 }
 
+/*PAGINA CONTABILIDAD*/
+
+.tecnologia-contabilidad{
+  background-image: url(/assets/images/fondo/fondoCON.PNG);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 118rem;
+  margin-top: 12rem;
+  position: relative;
+}
+
+.tecnologia-contabilidad::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(29, 50, 123, 0.7);
+
+}
+@media(min-width: 768px){
+  .tecnologia-contabilidad{
+    margin-top: 23.5rem;
+    height: 125rem;
+  }
+}
+@media(min-width: 1024px){
+  .tecnologia-contabilidad{
+    margin-top: 23.5rem;
+    height: 90rem;
+  }
+}
+
+/*PAGINA EDUCACIÓN BÁSICA*/
+
+.tecnologia-edubas{
+  background-image: url(/assets/images/fondo/fondoEB.PNG);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 118rem;
+  margin-top: 12rem;
+  position: relative;
+}
+
+.tecnologia-edubas::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(29, 50, 123, 0.7);
+
+}
+@media(min-width: 768px){
+  .tecnologia-edubas{
+    margin-top: 23.5rem;
+    height: 125rem;
+  }
+}
+@media(min-width: 1024px){
+  .tecnologia-edubas{
+    margin-top: 23.5rem;
+    height: 90rem;
+  }
+}
+
+/*PAGINA EDUCACIÓN INICIAL*/
+
+.tecnologia-eduinic{
+  background-image: url(/assets/images/fondo/fondoEI.PNG);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 118rem;
+  margin-top: 12rem;
+  position: relative;
+}
+
+.tecnologia-eduinic::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(29, 50, 123, 0.7);
+
+}
+@media(min-width: 768px){
+  .tecnologia-eduinic{
+    margin-top: 23.5rem;
+    height: 125rem;
+  }
+}
+@media(min-width: 1024px){
+  .tecnologia-eduinic{
+    margin-top: 23.5rem;
+    height: 90rem;
+  }
+}
 
 /*PAGINA DIPLOMADO ADULTO MAYOR*/
+
 .formacion-adulto{
-  background-image: url(/assets/images/img-carreras/adultomayor.jpg);
+  background-image: url(/assets/images/fondo/fondoAM.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2392,7 +2508,7 @@ input{
 
 /*PAGINA PACIENTE CRITICO*/
 .formacion-critico{
-  background-image: url(/assets/images/img-carreras/pacientecuidadoscriticos.jpg);
+  background-image: url(/assets/images/fondo/fondoPC.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2424,7 +2540,7 @@ input{
 /*PAGINA GESTION DE PROYECTOS*/
 
 .formacion-gestion{
-  background-image: url(/assets/images/img-carreras/gestioproyectos.png);
+  background-image: url(/assets/images/fondo/fondoGP.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2455,7 +2571,7 @@ input{
 /*PAGINA INSTRUMENTACION*/
 
 .formacion-instrumento{
-  background-image: url(/assets/images/img-carreras/instrumento.jpg);
+  background-image: url(/assets/images/fondo/fondoIQ.PNG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
