--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,18 @@
 }
 
 .sub-menu {
-  /*height: 9rem;*/
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.sub-menu img {
-  width: 6rem;
+.sub-menu .menu-item {
+  position: relative;
+  padding: 1rem 2rem;
 }
 
-.sub-menu a {
+.sub-menu .menu-item a {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -23,65 +24,84 @@
   color: #1D327B;
   font-weight: 800;
   cursor: pointer;
+  padding: 10px;
 }
 
-.sub-menu a:hover {
-  border-bottom: #ffe800 solid 1px;
-  font-size: 1.5rem;
+.sub-menu .menu-item a:hover {
+  color: #0056b3;
+  border-bottom: 2px solid #0056b3;
 }
 
-.navbar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
-
-.navbar .dropdown {
-  position: relative;
-}
-
-.navbar .dropdown ul {
+.sub-menu .dropdown ul {
+  display: none;
   position: absolute;
   top: 100%;
   left: 0;
   background: #f5f9fa;
-  padding: 1rem;
-  display: flex;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.3s;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  border-radius: 0 0 10px 10px;
+  width: 100%;
   z-index: 1000;
-}
-
-.navbar .dropdown:hover ul {
-  visibility: visible;
-  opacity: 1;
-}
-
-.navbar .dropdown ul .submenu-secciones {
   padding: 1rem;
-  background: #eaeaea;
-  margin-right: 1rem;
-  border-radius: 5px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.navbar .dropdown ul .submenu-secciones ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.sub-menu .dropdown:hover > ul {
+  display: flex;
 }
 
-.navbar .dropdown ul .submenu-secciones ul li {
+.submenu-secciones {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 0 1rem;
+}
+
+.submenu-secciones h5 {
+  font-size: 1rem;
+  color: #1D327B;
   margin-bottom: 0.5rem;
 }
 
-.navbar .dropdown ul .submenu-secciones ul li a {
-  text-decoration: none;
-  color: #00329b;
-  font-size: 1rem;
+.submenu-secciones ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-.navbar .dropdown ul .submenu-secciones ul li a:hover {
-  color: #ffe800;
+.submenu-secciones ul li {
+  margin: 0.5rem 0;
+}
+
+.submenu-secciones ul li a {
+  text-decoration: none;
+  color: #0056b3;
+  font-size: 0.9rem;
+}
+
+.submenu-secciones ul li a:hover {
+  text-decoration: underline;
+}
+
+/* Ajustes para que el menu de Formación Continua no cambie */
+.formacion-continua ul {
+  display: block;
+  padding: 0;
+}
+
+.formacion-continua ul li {
+  padding: 10px;
+  background-color: #f5f9fa;
+  border-bottom: 1px solid #ddd;
+}
+
+.formacion-continua ul li a {
+  text-decoration: none;
+  color: #1D327B;
+  font-weight: 500;
+}
+
+.formacion-continua ul li a:hover {
+  color: #0056b3;
+  text-decoration: underline;
 }
